[package]
name = "ok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.10"
wasm3 = { path="wasm3-rs", default-features = false, features = ["wasi", "build-bindgen"]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
limine = "0.2"
x86_64 = "0.14"
x86 = "0.52"
spin = "0.9"

[build-dependencies]
cc = "1.0"

[profile.release]
strip = true
lto = true