[package]
name = "ok"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.10"
wasm3 = { path = "wasm3-rs", default-features = false, features = [
    "wasi",
    "build-bindgen",
] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
limine = "0.4"
x86_64 = "0.15"
x86 = "0.52"
spin = "0.10"

[build-dependencies]
cc = "1.2"

[profile.release]
strip = true
lto = true
opt-level = "z"

[[bin]]
name = "ok"
path = "src/main.rs"
test = false
bench = false
